Add more animations

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                     <span><img src="./icons/menu-64.png" alt="" height="50px" width="50px"></span>
                 </button>
                 
-                <a id="main-logo" class="navbar-brand w-25 d-none d-md-flex justify-content-center" href="./index.html"><img src="./icons/notebook-64.png" alt="home-icon" width="30" height="24">TOP&nbsp;CLASS</a>
+                <a id="main-logo" class="nav-hover navbar-brand w-25 d-none d-md-flex justify-content-center" href="./index.html"><img src="./icons/notebook-64.png" alt="home-icon" width="30" height="24">TOP&nbsp;CLASS</a>
                 
 
                 <div class="collapse navbar-collapse w-auto pe-md-3" id="navbarSupportedContent">
                     <ul class="navbar-nav w-100 justify-content-md-evenly">
                         <li class="nav-item d-flex justify-content-between pe-2">
-                            <a class="nav-link text-dark main-nav-items" aria-current="page" href="./about.html">About</a>
+                            <a class="nav-hover nav-link main-nav-items" aria-current="page" href="./about.html">About</a>
 
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
