Fix linter errors

--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
             </nav>
             <nav class="navbar navbar-expand-md bg-light px-lg-5 px-3">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="menu-button navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                        aria-label="Toggle navigation" style="border: none;">
+                        aria-label="Toggle navigation">
                         <span><img src="./icons/menu-64.png" alt="" height="50px" width="50px"></span>
                     </button>
         
@@ -55,9 +55,9 @@
                             <li class="nav-item d-flex justify-content-between pe-2">
                                 <a class="nav-hover nav-link main-nav-items" aria-current="page" href="./index.html">Home</a>
         
-                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                <button class="menu-button navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                    aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+                                    aria-expanded="false" aria-label="Toggle navigation">
                                     <span><img src="./icons/x-mark-256.png" alt="" height="30px" width="30px"></span>
                                 </button>
                             </li>
@@ -83,11 +83,11 @@
                 </div>
             </nav>
         </header>
-        <section id="siteHome" class="container-fluid p-1 p-md-5 m-0 d-flex justify-content-center align-items-center" style="background:url('./images/home-bg.jpg')" ;>
+        <section id="siteHome" class="container-fluid p-1 p-md-5 m-0 d-flex justify-content-center align-items-center";>
             <div class="m-1 p-2 p-md-5 d-flex flex-column flex-md-wrap align-items-center">
                 <p id="welcome-text" class="py-1">"Hello! Welcome to TOP CLASS"</p>
                 <p id="main-title" class="m-0 text-center">LEVEL UP YOUR SKILLS <br> WITH TOP CLASS</p>
-                <div style="width: 30px; height: 0; border-bottom: 2px solid #FD3A2D; opacity: 0.7;" class="mt-4"></div>
+                <div class="orange-line-2 mt-4"></div>
                 <div class="bg-light w-100 p-md-5 p-1 my-5">
                     <p id="aboutPage-para" class="p-3">
                         Welcome to TOP CLASS! An online learning platform for people of all walks of life. Our mission is to deliver the best learning experience possible, with
@@ -110,7 +110,7 @@
         <section class="container-fluid p-0 p-md-5 d-flex flex-column align-items-center">
             <div class="container-fluid p-4 d-flex flex-column align-items-center h-50 m-0 p-md-5">
                 <h1 id="aboutPage-sub-title-2">You can also create and share your course here</h1>
-                <div style="width: 30px; height: 0; border-bottom: 2px solid #FD3A2D; opacity: 0.7;" class="mb-3 mt-1"></div>
+                <div class="orange-line-2 mb-3 mt-1"></div>
                 <h2 id="aboutPage-para-2" class="mb-5 px-md-5 mx-md-5">
                     To have your course featured in our platform it needs to meet certain criteria, you have to take a look at our program for creating a course and make sure you follow the requirements after that your course will be reviewed by our team of reviews then if it goes well it will be approved and featured here at TOP CLASS.
                 </h2>
@@ -121,7 +121,7 @@
             <div id="separator" class="container-fluid"></div>
             <div class="container-fluid d-flex flex-column align-items-center h-50 m-5 p-4">
                 <h1 id="aboutPage-sub-title-3">Check out our best selling courses</h1>
-                <div style="width: 30px; height: 0; border-bottom: 2px solid #FD3A2D; opacity: 0.7;" class="mb-3 mt-1"></div>
+                <div class="orange-line-2 mb-3 mt-1"></div>
                 <h2 id="aboutPage-para-3">Our React for Beginners Course by John Kim and Python for Beginners by Edin Diaz.</h2>
                 <div class="m-md-4">
                     <img class="best-selling-img p-3" src="./images/python.webp" alt="">
