--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="container-fluid d-flex justify-content-end">
                 <ul class="navbar-nav pe-lg-5">
                     <li class="nav-item d-none d-md-flex justify-content-between pe-1">
-                        <a class="nav-link" href="#"><img src="./icons/instagram-64.png" alt="instagram-icon" height="25px" width="25px"></a>
+                        <a class="nav-link" href="#"><img class="nav-1-img" src="./icons/instagram-64.png" alt="instagram-icon"></a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link text-light" href="#"><img src="./icons/twitter-64.png" alt="twitter-icon" height="25px" width="25px"></a>
+                        <a class="nav-link text-light" href="#"><img class="nav-1-img" src="./icons/twitter-64.png" alt="twitter-icon"></a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link text-light" href="#"><img src="./icons/facebook-64.png" alt="facebook-icon" height="25px" width="25px"></a>
+                        <a class="nav-link text-light" href="#"><img class="nav-1-img" src="./icons/facebook-64.png" alt="facebook-icon"></a>
                     </li>
                     <li class="nav-item">
                         <button class="btn text-light fw-semibold" href="#">ENGLISH</button>
@@ -37,8 +37,8 @@
         </nav>
         <nav class="navbar navbar-expand-md bg-light px-lg-5 px-3">
             <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+                <button class="menu-button navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"">
                     <span><img src="./icons/menu-64.png" alt="" height="50px" width="50px"></span>
                 </button>
                 
@@ -50,8 +50,8 @@
                         <li class="nav-item d-flex justify-content-between pe-2">
                             <a class="nav-hover nav-link main-nav-items" aria-current="page" href="./about.html">About</a>
 
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+                            <button class="menu-button navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"">
                                 <span><img src="./icons/x-mark-256.png" alt="" height="30px" width="30px"></span>
                             </button>
                         </li>
@@ -75,11 +75,11 @@
             </div>
         </nav>
     </header>
-    <section id="siteHome" class="container-fluid p-3 p-md-5 m-0" style="background:url('./images/home-bg.jpg')";>
+    <section id="siteHome" class="container-fluid p-3 p-md-5 m-0">
         <div class="p-md-5 m-md-5 p-3 m-1 d-flex flex-column flex-md-wrap">
             <p id="welcome-text"class="py-1">"Hello! Welcome to TOP CLASS"</p>
             <p id="main-title" class="py-3 m-0">LEVEL UP YOUR SKILLS <br> WITH US</p>
-            <div class="main-title-sub bg-light p-md-3 p-1 mb-4" style="border: 3px solid #fff;">
+            <div class="main-title-sub bg-light p-md-3 p-1 mb-4">
                 <p id="main-para" class="py-1">Join any course from the selection of many free and paid courses</p>
             </div>
             <p id="main-sub-title" class="py-1">COME MAKE LEARNING FUN WITH US</p>
@@ -90,7 +90,7 @@
         <div class="container-fluid px-md-5 p-0">
             <div class="d-flex justify-content-center flex-column align-items-center pb-4 pt-4">
                 <h2 id="about-title">Main Categories</h2>
-                <div style="width: 100px; height: 0; border-bottom: 2px solid #FD3A2D"></div>
+                <div class="orange-line"></div>
             </div>
             <ul class="d-flex flex-column justify-content-center flex-md-row p-md-0 px-0">
                 <li class="about-items"> <img class="about-image" src="./images/money.png" alt=""> <h4 class="about-sub-titles">Finance</h4> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
@@ -111,7 +111,7 @@
         <div class="container-fluid bg-dark px-3 py-5 px-md-5 py-md-5 d-flex">
             <div class="container-fluid d-flex flex-column align-items-center justify-content-center">
                 <h2 id="sponcer-title">Partner</h2>
-                <div style="width: 30px; height: 0; border-bottom: 2px solid #FD3A2D; opacity: 0.7;" class="mb-3 mt-1"></div>
+                <div class="orange-line-2 mb-3 mt-1"></div>
                 <div class="partners-img-box">
                     <img class="sponcer-images" src="./images/mozilla.png" alt="">
                     <img class="sponcer-images" src="./images/google.png" alt="">
