--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <div class="container-fluid d-flex justify-content-end">
                 <ul class="navbar-nav pe-lg-5">
                     <li class="nav-item d-none d-md-flex justify-content-between pe-1">
-                        <a class="nav-link" href="#"><img class="nav-1-img" src="./icons/instagram-64.png" alt="instagram-icon"></a>
+                        <a class="nav-link" href="#"><img class="nav-1-img" src="./icons/instagram-64.png" alt="top-nav-instagram-icon"></a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link text-light" href="#"><img class="nav-1-img" src="./icons/twitter-64.png" alt="twitter-icon"></a>
+                        <a class="nav-link text-light" href="#"><img class="nav-1-img" src="./icons/twitter-64.png" alt="top-nav-twitter-icon"></a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link text-light" href="#"><img class="nav-1-img" src="./icons/facebook-64.png" alt="facebook-icon"></a>
+                        <a class="nav-link text-light" href="#"><img class="nav-1-img" src="./icons/facebook-64.png" alt="top-nav-facebook-icon"></a>
                     </li>
                     <li class="nav-item">
                         <button class="btn text-light fw-semibold" href="#">ENGLISH</button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light fw-semibold" href="#"><img src="" alt="">My&nbsp;Profile</a>
+                        <a class="nav-link text-light fw-semibold" href="#">My&nbsp;Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light fw-semibold" href="#">Logout</a>
@@ -39,10 +39,10 @@
             <div class="container-fluid">
                 <button class="menu-button navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"">
-                    <span><img src="./icons/menu-64.png" alt="" height="50px" width="50px"></span>
+                    <span><img src="./icons/menu-64.png" alt="nav-bar-menu-icon" height="50px" width="50px"></span>
                 </button>
                 
-                <a id="main-logo" class="nav-hover navbar-brand w-25 d-none d-md-flex justify-content-center" href="./index.html"><img src="./icons/notebook-64.png" alt="home-icon" width="30" height="24">TOP&nbsp;CLASS</a>
+                <a id="main-logo" class="nav-hover navbar-brand w-25 d-none d-md-flex justify-content-center" href="./index.html"><img src="./icons/notebook-64.png" alt="nav-bar-company-logo" width="30" height="24">TOP&nbsp;CLASS</a>
                 
 
                 <div class="collapse navbar-collapse w-auto pe-md-3" id="navbarSupportedContent">
@@ -52,7 +52,7 @@
 
                             <button class="menu-button navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"">
-                                <span><img src="./icons/x-mark-256.png" alt="" height="30px" width="30px"></span>
+                                <span><img src="./icons/x-mark-256.png" alt="nav-bar-menu-cancel-button" height="30px" width="30px"></span>
                             </button>
                         </li>
                         <li class="nav-item">
@@ -68,7 +68,7 @@
                             <a class="nav-hover nav-link main-nav-items" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" href="#">My&nbsp;Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a id="my-basket" class="nav-hover nav-link px-2 main-nav-items" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" href="#"><img src="./icons/shopping-basket-64.png" alt="shopping basket" height="20px" width="20px">My&nbsp;Basket</a>
+                            <a id="my-basket" class="nav-hover nav-link px-2 main-nav-items" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" href="#"><img src="./icons/shopping-basket-64.png" alt="shopping-basket" height="20px" width="20px">My&nbsp;Basket</a>
                         </li>
                     </ul>
                 </div>
@@ -78,7 +78,7 @@
     <section id="siteHome" class="container-fluid p-3 p-md-5 m-0">
         <div class="p-md-5 m-md-5 p-3 m-1 d-flex flex-column flex-md-wrap">
             <p id="welcome-text"class="py-1">"Hello! Welcome to TOP CLASS"</p>
-            <p id="main-title" class="py-3 m-0">LEVEL UP YOUR SKILLS <br> WITH US</p>
+            <h1 id="main-title" class="py-3 m-0">LEVEL UP YOUR SKILLS <br> WITH US</h1>
             <div class="main-title-sub bg-light p-md-3 p-1 mb-4">
                 <p id="main-para" class="py-1">Join any course from the selection of many free and paid courses</p>
             </div>
@@ -93,11 +93,11 @@
                 <div class="orange-line"></div>
             </div>
             <ul class="d-flex flex-column justify-content-center flex-md-row p-md-0 px-0">
-                <li class="about-items"> <img class="about-image" src="./images/money.png" alt=""> <h4 class="about-sub-titles">Finance</h4> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
-                <li class="about-items"> <img class="about-image" src="./images/joystick.png" alt=""> <h4 class="about-sub-titles">Gaming</h4> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
-                <li class="about-items"> <img class="about-image" src="./images/web.png" alt=""> <h4 class="about-sub-titles">Development</h4> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
-                <li class="about-items"> <img class="about-image" src="./images/keyboard.png" alt=""> <h4 class="about-sub-titles">Programming</h4> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
-                <li class="about-items"> <img class="about-image" src="./images/music.png" alt=""> <h4 class="about-sub-titles">Music</h4> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
+                <li class="about-items"> <img class="about-image" src="./images/money.png" alt="finance-course-picture"> <h3 class="about-sub-titles">Finance</h3> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
+                <li class="about-items"> <img class="about-image" src="./images/joystick.png" alt="gaming-course-picture"> <h3 class="about-sub-titles">Gaming</h3> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
+                <li class="about-items"> <img class="about-image" src="./images/web.png" alt="web-development-course-picture"> <h3 class="about-sub-titles">Development</h3> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
+                <li class="about-items"> <img class="about-image" src="./images/keyboard.png" alt="programming-course-picture"> <h3 class="about-sub-titles">Programming</h3> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
+                <li class="about-items"> <img class="about-image" src="./images/music.png" alt="music-course-picture"> <h3 class="about-sub-titles">Music</h3> <p class="about-sub-description">Choose from a vast selection of courses that fit your learning style.</p> </li>
             </ul>
             <div class="d-flex justify-content-center pb-5 pt-3">
                 <button class="px-5 py-4" id="about-btn"><h3>SEE ALL CATEGORIES</h3></button>
@@ -107,24 +107,24 @@
 
     <section id="featured"></section>
 
-    <section class="container-fluid p-0">
+    <footer class="container-fluid p-0">
         <div class="container-fluid bg-dark px-3 py-5 px-md-5 py-md-5 d-flex">
             <div class="container-fluid d-flex flex-column align-items-center justify-content-center">
                 <h2 id="sponcer-title">Partner</h2>
                 <div class="orange-line-2 mb-3 mt-1"></div>
                 <div class="partners-img-box">
-                    <img class="sponcer-images" src="./images/mozilla.png" alt="">
-                    <img class="sponcer-images" src="./images/google.png" alt="">
-                    <img class="sponcer-images" src="./images/hyundai.png" alt="">
-                    <img class="sponcer-images" src="./images/uber.png" alt="">
-                    <img class="sponcer-images" src="./images/air-bnb.png" alt="">
+                    <img class="sponcer-images" src="./images/mozilla.png" alt="sponcer-section-logo-mozilla-firefox">
+                    <img class="sponcer-images" src="./images/google.png" alt="sponcer-section-logo-google">
+                    <img class="sponcer-images" src="./images/hyundai.png" alt="sponcer-section-logo-hyundai">
+                    <img class="sponcer-images" src="./images/uber.png" alt="sponcer-section-logo-uber">
+                    <img class="sponcer-images" src="./images/air-bnb.png" alt="sponcer-section-logo-air-bnb">
                 </div>
             </div>
         </div>
         <div class="container-fluid bg-light p-md-5">
                 <div class="container d-flex justify-content-center align-items-center p-md-4">
                     <div class="d-flex justify-content-center align-items-center py-5 py-md-3 ps-md-5 ps-1 pe-3">
-                        <img id="cc-logo" src="./icons/cc-blk.png" alt="home-icon">
+                        <img id="cc-logo" src="./icons/cc-blk.png" alt="creative-commons-logo">
                     </div>
                     <div class="d-flex flex-column justify-content-center py-3 pe-md-5 pe-1">
                         <h2 class="cc-text-1">2015 Creative Commons. Some Rights Reserved</h2>
@@ -137,7 +137,7 @@
                     </div>
                 </div>
         </div>
-    </section>
+    </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
